door height rule: done. working on the cans

--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
             <div class="btn-wrapper">
             <button id="submit" type="submit">Calcular</button>
             <button type="button" class="reset-btn">Resetar</button>
-        </div>
+            </div>
                 <span id="description"></span>
                 <h3 id="metragemFinal">Area total:</h3>
                 <h3 id="litrosDeTinta">Quantidade indicada de tinta:</h3>
+                <h3 id="qtdLatas">Sugestão de latas:</h3>
         </div>       
     </form>
 </section> 
