--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Teste | Digital Republic</title>
+    <link rel="stylesheet" href="/assets/styles/index.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
             <h1>Calcular a quantidade de tinta</h1>
             <p>Não sabe o quanto comprar de tinta?
             a gente te ajuda!<br>
-            Basta informar as medidas do cômodo que você quer pintar</p>
+            Basta informar as medidas em <strong>metros</strong> do cômodo que você quer pintar</p>
         </div>
         <div class="wrapper">
             <div id="grupo1" class="wall-wrapper">
@@ -63,6 +63,6 @@
         </div>       
     </form>
 </section> 
-    <script src="scripts.js"></script>
+    <script src="/assets/scripts/index.js"></script>
 </body>
 </html>
